.env_/logs/dag_id=POSTGRES_CONNECTION/run_id=manual__2024-01-23T13:45:07.783015+00:00/task_id=load_data_to_postgres/attempt=2.log
[2024-01-23T13:47:10.344+0000] {taskinstance.py:1957} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: POSTGRES_CONNECTION.load_data_to_postgres manual__2024-01-23T13:45:07.783015+00:00 [queued]>
[2024-01-23T13:47:10.357+0000] {taskinstance.py:1957} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: POSTGRES_CONNECTION.load_data_to_postgres manual__2024-01-23T13:45:07.783015+00:00 [queued]>
[2024-01-23T13:47:10.358+0000] {taskinstance.py:2171} INFO - Starting attempt 2 of 6
[2024-01-23T13:47:10.376+0000] {taskinstance.py:2192} INFO - Executing <Task(PostgresOperator): load_data_to_postgres> on 2024-01-23 13:45:07.783015+00:00
[2024-01-23T13:47:10.382+0000] {standard_task_runner.py:60} INFO - Started process 2815 to run task
[2024-01-23T13:47:10.385+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'POSTGRES_CONNECTION', 'load_data_to_postgres', 'manual__2024-01-23T13:45:07.783015+00:00', '--job-id', '102', '--raw', '--subdir', 'DAGS_FOLDER/post_opertor.py', '--cfg-path', '/tmp/tmp5p6y5tni']
[2024-01-23T13:47:10.389+0000] {standard_task_runner.py:88} INFO - Job 102: Subtask load_data_to_postgres
[2024-01-23T13:47:10.454+0000] {task_command.py:423} INFO - Running <TaskInstance: POSTGRES_CONNECTION.load_data_to_postgres manual__2024-01-23T13:45:07.783015+00:00 [running]> on host 48444e3206b7
[2024-01-23T13:47:10.604+0000] {taskinstance.py:2481} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='Rhon' AIRFLOW_CTX_DAG_ID='POSTGRES_CONNECTION' AIRFLOW_CTX_TASK_ID='load_data_to_postgres' AIRFLOW_CTX_EXECUTION_DATE='2024-01-23T13:45:07.783015+00:00' AIRFLOW_CTX_TRY_NUMBER='2' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-01-23T13:45:07.783015+00:00'
[2024-01-23T13:47:10.607+0000] {sql.py:276} INFO - Executing: create table if not exists People 
        ( id  integer ,name character , phone charater
        primary key (id))
[2024-01-23T13:47:10.623+0000] {base.py:83} INFO - Using connection ID 'postgres' for task execution.
[2024-01-23T13:47:10.642+0000] {base.py:83} INFO - Using connection ID 'postgres' for task execution.
[2024-01-23T13:47:10.672+0000] {sql.py:432} INFO - Running statement: create table if not exists People 
        ( id  integer ,name character , phone charater
        primary key (id)), parameters: None
[2024-01-23T13:47:10.678+0000] {taskinstance.py:2699} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 392, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 437, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "("
LINE 3:         primary key (id))
                            ^

[2024-01-23T13:47:10.694+0000] {taskinstance.py:1138} INFO - Marking task as UP_FOR_RETRY. dag_id=POSTGRES_CONNECTION, task_id=load_data_to_postgres, execution_date=20240123T134507, start_date=20240123T134710, end_date=20240123T134710
[2024-01-23T13:47:10.719+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 102 for task load_data_to_postgres (syntax error at or near "("
LINE 3:         primary key (id))
                            ^
; 2815)
[2024-01-23T13:47:10.762+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-01-23T13:47:10.798+0000] {taskinstance.py:3281} INFO - 0 downstream tasks scheduled from follow-on schedule check
